<resources>
    <string name="app_name">SimpleChatApplication</string>
    <string name="action_settings">Settings</string>
    <string name="about">关于</string>
    <string name="send">发送</string>
    <string name="chat">聊天</string>
    <string name="single_chat">单聊</string>
    <string name="group_chat">群聊</string>
    <string name="picture">图片</string>
    <string name="take_photo">拍照</string>
    <string name="video">视频</string>
    <string name="create_file_failed">创建文件失败</string>
    <string name="record_voice_hint">按住 说话</string>
    <string name="cancel_record_voice_hint">松开手指，取消发送</string>
    <string name="send_voice_hint">松开 结束</string>
    <string name="move_to_cancel_hint">手指上滑，取消发送</string>
    <string name="rest_record_time_hint">还可以说%s秒</string>
    <string name="time_too_short_toast">时间太短！</string>
    <string name="file_fetch_failed">文件获取失败</string>
    <string name="voice_length">10"</string>
    <string name="symbol_second">\"</string>
    <string name="resend_message_hint">确定重发消息?</string>
    <string name="cancel">取消</string>
    <string name="resend_commit">重发</string>
    <string name="copy">复制</string>
    <string name="copy_toast">已复制</string>
    <string name="forward_msg">转发</string>
    <string name="delete">删除</string>
    <string name="loading">加载中</string>
    <string name="login">登录中</string>
    <string name="record_voice_permission_denied">请在应用的权限管理中将使用录音选项设置为允许，
        否则将无法使用录音功能</string>
    <string name="record_voice_permission_request">若要使用语音功能，请选择允许录音</string>
    <string name="local_picture_not_found_toast">暂无外部存储，某些本地图片不可预览</string>
    <string name="sdcard_not_exist_toast">暂无外部存储</string>
    <string name="voice_fetch_failed_toast">获取语音失败，请重试</string>
    <string name="file_not_found_toast">文件丢失</string>
    <string name="camera_not_prepared">摄像头尚未准备好</string>
    <string name="about_content">简单的聊天demo, 可以发文字, 语音及拍照发送图片.
        jmessage—sdk版本为1.1.5</string>

    <string name="yesterday">昨天</string>
    <string name="before_dawn">凌晨</string>
    <string name="morning">早上</string>
    <string name="afternoon">下午</string>
    <string name="night">晚上</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>

    <string name="server_abnormal_toast">服务器返回异常，请重试</string>
    <string name="connect_failed_toast">连接服务器失败，请稍后重试</string>
    <string name="server_return_error_toast">服务器返回格式错误</string>
    <string name="unknown_error_toast">未知错误</string>
    <string name="system_error_toast">系统内部错误，请稍候重试</string>
    <string name="parameter_illegal">参数值不合法</string>

    <!--以下为错误码提示-->
    <string name="server_800002">AppKey信息为空</string>
    <string name="server_800003">AppKey未注册</string>
    <string name="server_800004">用户ID为空</string>
    <string name="server_800005">用户ID未注册(AppKey无该UID)</string>
    <string name="server_800006">用户ID不存在(数据库中无该UID)</string>
    <string name="server_800012">请重新登录</string>
    <string name="server_800013">您的账号已登出，请重新登录</string>
    <string name="server_801003">用户名不存在</string>
    <string name="server_802001">用户名为空</string>
    <string name="server_801004">密码错误</string>
    <string name="server_803001">发送消息失败，状态存储异常</string>
    <string name="server_803002">发送消息失败，系统网络异常</string>
    <string name="server_803003">发送失败，目标用户未注册或不存在</string>
    <string name="server_803004">发送失败，此群已被删除</string>
    <string name="server_803005">您已被请出此群，不能发送消息</string>
    <string name="server_803008">消息已发出，但被对方拒收了。</string>
    <string name="server_808003">讨论组数量已达上限，创建失败</string>
    <string name="server_808004">群组名长度超出上限</string>
    <string name="server_810003">用户不属于该群组</string>
    <string name="server_810005">要添加的用户尚未注册</string>
    <string name="server_810007">用户已存在</string>
    <string name="server_810008">讨论组的成员数量已达上限，添加失败</string>
    <string name="server_810009">该用户拥有的讨论组数量已达上限，添加失败</string>
    <string name="server_811003">用户不在该讨论组中，删除成员失败</string>
    <string name="server_812002">您已被请出此群，不能修改相关信息</string>
    <string name="server_818001">要添加的黑名单列表为空，添加失败</string>
    <string name="server_818002">要添加的黑名单列表中有成员不存在，添加失败</string>
    <string name="server_818003">要添加的黑名单列表中有成员不能被添加，添加失败</string>
    <string name="server_818004">要添加的黑名单列表中有成员重复添加，添加失败</string>
    <string name="sdk_http_899001">用户已存在</string>
    <string name="sdk_http_899006">该群已被删除</string>
    <string name="sdk_http_898005">uid不存在</string>
    <string name="sdk_http_898006">此群已被删除</string>
    <string name="sdk_http_898008">校验失败</string>
    <string name="sdk_http_898009">APPKey不存在</string>
    <string name="sdk_http_898010">请求失败，请稍候重试</string>
    <string name="sdk_http_898030">系统繁忙，稍后重试</string>
    <string name="sdk_87x_871104">服务器返回错误</string>
    <string name="sdk_87x_871303">用户名需以数字或字母开头，长度在4-128个字节之间，且不能带_ @ -以外的字符</string>
    <string name="sdk_87x_871304">密码长度要在4-128个字节之间</string>
    <string name="sdk_87x_871305">名称长度须小于64个字节</string>
    <string name="sdk_87x_871309">消息所含文件不存在</string>
    <string name="sdk_87x_871310">网络已断开，请检查网络连接</string>
    <string name="sdk_87x_871311">用户未设定头像，下载头像失败</string>
    <string name="sdk_87x_871312">ImageContent创建失败</string>
    <string name="sdk_87x_871403">第三方上传失败，请稍后重试</string>
    <string name="sdk_87x_871404">下载失败，请稍后重试</string>
    <string name="sdk_87x_871501">appkey与appid不匹配或者token无效</string>
    <string name="sdk_87x_871502">appkey无效</string>
    <string name="sdk_87x_871503">appkey与platform不匹配</string>
    <string name="sdk_87x_871504">push注册还未完成，请稍后重试</string>
    <string name="sdk_87x_871505">包名不存在</string>
    <string name="sdk_87x_871506">imei无效</string>
    <string name="sdk_87x_871201">请求超时，请检查您的网络</string>
</resources>
