<?xml version="1.0" encoding="utf-8"?>
<cn.jmessage.android.uicomponents.view.ChatView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chat_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:listViewAttr="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/menu_title_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#3f80dc">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:textSize="20sp"
            android:text="@string/chat"/>

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/chat_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/menu_title_bar"
        android:layout_above="@+id/send_msg_layout"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <cn.jmessage.android.uicomponents.view.DropDownListView
            android:id="@+id/chat_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F0F1F3"
            android:listSelector="@android:color/transparent"
            android:transcriptMode="normal"
            android:divider="@null"
            listViewAttr:isDropDownStyle="true"
            listViewAttr:isOnBottomStyle="false"
            listViewAttr:isAutoLoadOnBottom="false">
        </cn.jmessage.android.uicomponents.view.DropDownListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/send_msg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#E5E5E5"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible">


        <ImageButton
            android:id="@+id/switch_voice_ib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/voice"/>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/chat_input_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/chat_input_bg"
                android:gravity="start"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/text_cursor_bg"
                android:padding="5dp"
                android:textColor="#000000"
                android:inputType="textMultiLine"/>

            <cn.jmessage.android.uicomponents.view.RecordVoiceButton
                android:id="@+id/voice_btn"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/voice_bg"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/record_voice_hint"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:visibility="gone" />


        </RelativeLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="5dp">

            <Button
                android:id="@+id/send_msg_btn"
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:background="@drawable/register_btn_bg"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:textSize="14sp"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/add_file_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/more_menu"
                android:focusable="true" />
        </FrameLayout>

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d4d4d4" />

        <TableLayout
            android:id="@+id/more_menu_tl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F0F1F3"
            android:orientation="horizontal"
            android:visibility="gone">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/pick_from_local_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/pick_picture" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/picture"
                        android:textColor="#696969" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/pick_from_camera_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/take_photo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/take_photo"
                        android:textColor="#696969" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <ImageButton
                        android:id="@+id/send_location_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                        android:background="@drawable/video" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/video"
                        android:textColor="#696969" />
                </LinearLayout>

            </TableRow>

        </TableLayout>

    </LinearLayout>


</cn.jmessage.android.uicomponents.view.ChatView>
